<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:background="@color/LeftPanel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/contacts"
            android:layout_width="173dp"
            android:layout_height="182dp"
            android:layout_marginBottom="144dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/Dostavka"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/contacts2"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/Oplata"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/contacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/contacts3"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/Glavnaya"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/contacts2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Sales_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contacts"
            app:layout_constraintVertical_bias="0.393"
            app:srcCompat="@drawable/ic_ellipse"
            tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="49dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Sales_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton"
            app:srcCompat="@drawable/ic_ellipse"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
            app:layout_constraintEnd_toEndOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="@+id/imageButton"
            app:srcCompat="@drawable/ic_instagram"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="29dp"
            android:layout_height="19dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
            app:layout_constraintEnd_toEndOf="@+id/imageButton2"
            app:layout_constraintStart_toStartOf="@+id/imageButton2"
            app:layout_constraintTop_toTopOf="@+id/imageButton2"
            app:srcCompat="@drawable/ic_vk"
            tools:ignore="ImageContrastCheck" />

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/Sales_icon"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="206dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/logo_name"
        android:textColor="@color/Red"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/info"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="77dp"
        android:fontFamily="@font/roboto"
        android:text="@string/nameInfo"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="79dp"
        android:fontFamily="@font/roboto"
        android:text="@string/yearInfo"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="305dp"
        android:layout_height="78dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="18dp"
        android:fontFamily="@font/roboto"
        android:text="@string/CourseInfo"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="303dp"
        android:layout_height="126dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="17dp"
        android:fontFamily="@font/roboto"
        android:text="@string/educationInfo"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="84dp"
        android:fontFamily="@font/roboto"
        android:text="@string/setiInfo"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pochta"
        android:textColor="@color/Red"
        app:layout_constraintBottom_toBottomOf="@+id/textView26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toEndOf="@+id/textView26"
        app:layout_constraintTop_toTopOf="@+id/textView26"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />
</android.support.constraint.ConstraintLayout>