<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".zxc_rem">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="65dp"
        android:layout_height="683dp"
        android:background="@color/LeftPanel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/contacts"
            android:layout_width="179dp"
            android:layout_height="153dp"
            android:layout_marginBottom="152dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/Dostavka"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/contacts2"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/Oplata"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/contacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/contacts3"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/Glavnaya"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/contacts2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Sales_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contacts"
            app:layout_constraintVertical_bias="0.393"
            app:srcCompat="@drawable/ic_ellipse"
            tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="49dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Sales_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton"
            app:srcCompat="@drawable/ic_ellipse"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
            app:layout_constraintEnd_toEndOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="@+id/imageButton"
            app:srcCompat="@drawable/ic_instagram"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="29dp"
            android:layout_height="19dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
            app:layout_constraintEnd_toEndOf="@+id/imageButton2"
            app:layout_constraintStart_toStartOf="@+id/imageButton2"
            app:layout_constraintTop_toTopOf="@+id/imageButton2"
            app:srcCompat="@drawable/ic_vk"
            tools:ignore="ImageContrastCheck" />

    </android.support.constraint.ConstraintLayout>

    <ImageButton
        android:id="@+id/backspaceGamePad"
        android:layout_width="73dp"
        android:layout_height="33dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_backspace"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="161dp"
        android:layout_height="161dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/Glavnaya"
        app:layout_constraintEnd_toStartOf="@+id/imageView18"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_rem" />


    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="170dp"
        android:layout_height="158dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/Glavnaya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_valik" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="314dp"
        android:layout_height="130dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView18"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/imageView16">

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/zxc"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/zxcRB1Rem"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/zxcRB2Rem"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/zxcRB3Rem"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/goPayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:srcCompat="@drawable/ic_go_pay"
        android:contentDescription="@string/Add"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/zxcPay"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/itog"
        app:layout_constraintEnd_toStartOf="@+id/itog"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/itog"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/itog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/goPayButton"
        app:layout_constraintEnd_toEndOf="@+id/goPayButton" />

</android.support.constraint.ConstraintLayout>