<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pay">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:background="@color/LeftPanel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/contacts"
            android:layout_width="179dp"
            android:layout_height="153dp"
            android:layout_marginBottom="152dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/Dostavka"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/contacts2"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/Oplata"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/contacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/contacts3"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/Glavnaya"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/contacts2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Sales_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contacts"
            app:layout_constraintVertical_bias="0.393"
            app:srcCompat="@drawable/ic_ellipse"
            tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="49dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Sales_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton"
            app:srcCompat="@drawable/ic_ellipse"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
            app:layout_constraintEnd_toEndOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="@+id/imageButton"
            app:srcCompat="@drawable/ic_instagram"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="29dp"
            android:layout_height="19dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
            app:layout_constraintEnd_toEndOf="@+id/imageButton2"
            app:layout_constraintStart_toStartOf="@+id/imageButton2"
            app:layout_constraintTop_toTopOf="@+id/imageButton2"
            app:srcCompat="@drawable/ic_vk"
            tools:ignore="ImageContrastCheck" />

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/Sales_icon"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="206dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/logo_name"
        android:textColor="@color/Red"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Oplata"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="311dp"
        android:layout_height="230dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/payInfo"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView28"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>